Sun Dec 21 14:54:49 GMT 2003  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_postlist.cc,backends/quartz/quartz_postlist.h,
	  tests/quartztest.cc: Subsumed QuartzPostList::add_entry and
	  QuartzPostList::delete_entry into QuartzPostList::merge_changes.

Sun Dec 21 03:21:42 GMT 2003  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_database.cc,
	  backends/quartz/quartz_postlist.cc,
	  backends/quartz/quartz_postlist.h: Move merging on postlist changes
	  into QuartzPostList in preparation for an efficient
	  reimplementation.

Sun Dec 21 01:47:07 GMT 2003  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_postlist.h,
	  backends/quartz/quartz_table_entries.h: Fixed typos and incorrect
	  comments.

Sat Dec 20 22:11:26 GMT 2003  Olly Betts <olly@survex.com>

	* backends/quartz/: Removed several needless inclusions of
	  quartz_table_entries.h.

Sat Dec 20 16:31:46 GMT 2003  Olly Betts <olly@survex.com>

	* backends/quartz/,docs/quartzdesign.html: Removed all the quartz
	  lexicon code and docs.  It's been disabled for ages, and we've
	  not missed it.

Sat Dec 20 01:21:47 GMT 2003  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_database.h: Added doxygen comments for the
	  QuartzWritableDatabase members we use to buffer changes.

Sat Dec 20 01:19:10 GMT 2003  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_database.cc: Trigger autoflush on
	  totlen_added + totlen_removed rather than specially tracking the
	  number of document add/delete/replace operations.

Fri Dec 19 22:51:26 GMT 2003  Olly Betts <olly@survex.com>

	* backends/quartz/: Buffer up changes to the postlists and apply them
	  all at once (at present they're applied inefficiently, but this is
	  change enables us to apply them with an efficient merge).
	* tests/api_db.cc,tests/quartztest.cc: Added a couple of tests, and
	  commented out some test lines which fail in debug builds.

Sun Dec 14 03:38:55 GMT 2003  Olly Betts <olly@survex.com>
