@@ -1,3 +1,9 @@
+Sun Dec 21 21:44:07 GMT 2003  Olly Betts <olly@survex.com>
+
+	* backends/quartz/quartz_postlist.cc: Renamed
+	  skip_and_check_tname_in_key() to check_tname_in_key() as it doesn't
+	  do any sort of skipping!
+
 Sun Dec 21 14:54:49 GMT 2003  Olly Betts <olly@survex.com>
 
 	* backends/quartz/quartz_postlist.cc,backends/quartz/quartz_postlist.h,
